Endret sending av epost til å ta i bruk Microsoft Graph API. Fjernet java.security.egd=file og javax.net.debug og lagt til --enable-preview.