@@ -4,6 +4,5 @@ COPY app/target/app.jar /app/app.jar
 COPY export-vault-secrets.sh /init-scripts/50-export-vault-secrets.sh
 
 ENV JAVA_OPTS="-Xmx1024m \
-               -Djava.security.egd=file:/dev/./urandom \
-               -Dspring.profiles.active=nais \
-               -Djavax.net.debug=ssl,handshake"
+               --enable-preview \
+               -Dspring.profiles.active=nais"
